@@ -111,6 +111,11 @@
 @redhat@%_fixowner	[ `%{__id_u}` = '0' ] && %{__chown_Rhf} root
 @redhat@%_fixgroup	[ `%{__id_u}` = '0' ] && %{__chgrp_Rhf} @ROOT_GROUP@
 @redhat@%_fixperms	%{__chmod} -Rf @FIXPERMS@
+@redhat@#---------------------------------------------------------------------
+@redhat@#	Always use %defattr(-,root,root) in %files (added in rpm-4.0.4)
+@redhat@#
+@redhat@%files()	%%files %* \
+@redhat@%defattr(-,root,root,-)
 
 @mandrake@#---------------------------------------------------------------------
 @mandrake@#	Mandrake vendor specific macros
