@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.24
+Release: 0.25
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -516,6 +516,9 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
+* Fri Feb  1 2002 Jeff Johnson <jbj@redhat.com>
+- macro for %%files, always include %%defattr(), redhat config only.
+
 * Thu Jan 31 2002 Jeff Johnson <jbj@redhat.com>
 - permit args to be hidden within %%__find_{requires,provides}.
 - a couple more perl.{prov,req} fiddles.
