@@ -43,6 +43,7 @@
 	- use chainsaw algorithm for dependency tree decimation when ordering.
 	- permit args to be hidden within %__find_{requires,provides}.
 	- a couple more perl.{prov,req} fiddles.
+	- macro for %files, always include %defattr(), redhat config only.
 
 4.0.2 -> 4.0.3:
 	- update per-interpreter dependency scripts, add sql/tcl (#20295).
